Prevent IE from making textarea too small

--- a/src/Components/ParentForm/style.css
+++ b/src/Components/ParentForm/style.css
@@ -1,3 +1,7 @@
+textarea {
+  min-height: 5em;
+}
+
 .subform-selectors {
   background: white;
   border-bottom: 1px solid black;
